<resources>
    <string name="app_name">C196 - WGU Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_label">WGU Mobile - C196</string>
    <string name="button_visit">Visit</string>
    <string name="see_term_info">See terms</string>
    <string name="see_term_courses">See all available courses</string>
    <string name="see_term_assessments">See all available assessments</string>
    <string name="term_name">TermName</string>
    <string name="enter_note">Enter Term Name</string>
    <string name="textview">TextView</string>
    <string name="add_sample_terms">Add Sample Terms</string>
    <string name="delete_terms">Delete Terms</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="not_yet_chosen">Not Yet Chosen</string>
    <string name="choose_date">Choose Date</string>
    <string name="add_courses">Add Sample Courses</string>
    <string name="changeme">ChangeMe</string>
    <string name="status_static">Status:</string>
    <string name="delete_courses">Delete All Courses</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="anticipated_end_date">Anticipated End Date:</string>
    <string name="add_assessments">Add Sample Assessments</string>
    <string name="delete_assessments">Delete All Assessments</string>
    <string name="add_all">Add All</string>
    <string name="see_mentors">See all mentors</string>
    <string name="add_mentors">Add Sample Mentors</string>
    <string name="delete_mentors">Delete All Mentors</string>
    <string name="sample_email">some.email@someemail.com</string>
    <string name="sample_phone">385-355-5555</string>
    <string name="sample_mentor_name">Bob McGeederson</string>
    <string name="phone_text">Phone number</string>
    <string name="email_text">Email address</string>
    <string name="enter_term">Enter Term</string>
    <string name="send_notification">Send Notification</string>
    <string name="see_course_note_info">See notes for this course</string>
    <string name="course_note_name">Enter Course Note Here</string>
    <string name="get_term_courses_tv">See courses in this term</string>
    <string name="assessments_by_course_tv">See all assessments for this course</string>
    <string name="assessment_type_text">Assessment Type:</string>
    <string name="course_status">Course Status:</string>
    <string name="alarms_for_dates">Set Alarms for these dates?</string>
    <string name="add_course">Add Course</string>
</resources>
