<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.c196project.MainActivity">
    <item
        android:id="@+id/action_add_all"
        android:orderInCategory="99"
        android:title="@string/add_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_sample_terms"
        android:orderInCategory="100"
        android:title="@string/add_sample_terms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_sample_terms"
        android:orderInCategory="101"
        android:title="@string/delete_terms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_sample_courses"
        android:orderInCategory="102"
        android:title="@string/add_courses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_sample_courses"
        android:orderInCategory="103"
        android:title="@string/delete_courses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_sample_assessments"
        android:orderInCategory="104"
        android:title="@string/add_assessments"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_sample_assessments"
        android:orderInCategory="105"
        android:title="@string/delete_assessments"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_sample_mentors"
        android:orderInCategory="106"
        android:title="@string/add_mentors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_sample_mentors"
        android:orderInCategory="107"
        android:title="@string/delete_mentors"
        app:showAsAction="never" />
</menu>
