<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/mentor_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample_mentor_name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/edit_mentor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mentor_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sample_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mentor_phone_text"
        app:layout_constraintStart_toEndOf="@+id/edit_mentor"
        app:layout_constraintTop_toBottomOf="@+id/mentor_name_text" />

    <TextView
        android:id="@+id/mentor_phone_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mentor_name_text"
        app:layout_constraintTop_toTopOf="@+id/mentor_name_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_mentor"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>