<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/course_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/changeme"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/add_to_term"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/changeme"
        app:layout_constraintStart_toStartOf="@+id/course_name_text"
        app:layout_constraintTop_toBottomOf="@+id/course_name_text" />

    <TextView
        android:id="@+id/status_static_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status_static"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/course_name_text"
        app:layout_constraintTop_toBottomOf="@+id/course_date_text" />

    <TextView
        android:id="@+id/status_replaceable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/changeme"
        app:layout_constraintStart_toEndOf="@+id/status_static_info"
        app:layout_constraintTop_toTopOf="@+id/status_static_info" />

    <CheckBox
        android:id="@+id/add_to_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>