<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseEditorActivity"
    tools:showIn="@layout/activity_courses_editor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:focusable="true" />

    <EditText
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_course_name"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date_button" />

    <TextView
        android:id="@+id/start_date_replaceable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/not_yet_chosen"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/startDateText"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/end_date_replaceable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_yet_chosen"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/endDateText"
        app:layout_constraintTop_toBottomOf="@+id/start_date_button" />

    <Button
        android:id="@+id/start_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <Button
        android:id="@+id/end_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />


    <Spinner
        android:id="@+id/course_status_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/course_status_desc"
        app:layout_constraintTop_toBottomOf="@+id/end_date_button" />

    <CheckBox
        android:id="@+id/set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/alarms_for_dates"
        app:layout_constraintStart_toEndOf="@+id/end_date_button"
        app:layout_constraintTop_toBottomOf="@+id/end_date_replaceable" />

    <TextView
        android:id="@+id/course_status_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_date_button" />

    <TextView
        android:id="@+id/assessIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Assessments:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/course_status_desc"
        app:layout_constraintTop_toBottomOf="@+id/course_status_desc" />

    <TextView
        android:id="@+id/assessmentChangeableTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessIndicator"  />

    <TextView
        android:id="@+id/mentorIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Mentors:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/assessmentChangeableTv"
        app:layout_constraintTop_toBottomOf="@+id/assessmentChangeableTv" />

    <TextView
        android:id="@+id/mentor_changeable_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="ChangeForMentorList"
        app:layout_constraintStart_toStartOf="@+id/mentorIndicator"
        app:layout_constraintTop_toBottomOf="@+id/mentorIndicator" />


    <include
        layout="@layout/nav_course_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentor_changeable_tv" />



</androidx.constraintlayout.widget.ConstraintLayout>